# ai-in-games

./: .gitignore
slime-valley/: README.md  eval.py  eval_checkpoints.py  generate_charts.py  main.py  project-desc.md  pyproject.toml  raport.md  run_experiments.py  train_opt.py  train_rl.py
slime-valley/agents/: __init__.py  gym_compat.py  heuristic.py  opt_agent.py  opt_history.json  opt_weights.json  rl_agent.py
slime-valley/opt-experiment/: opt_history_real.json  run_opt.py
slime-valley/results/: baseline.csv  tournament.csv  tournament_new.csv
