[project]
name = "slime-valley"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gym==0.23.1",
    "numpy<2",
    "opencv-python<4.12",
    "pygame>=2.6.1",
    "pyglet<2",
    "sb3-contrib>=2.4.0",
    "shimmy>=2.0.0",
    "slimevolleygym>=0.1.0",
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
    "v2>=1.0.7",
    "cma>=3.3",
    "scikit-optimize>=0.9",
    "matplotlib>=3.7",
]
